<resources>
    <string name="app_name">Facilito</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="facilito">Facilito</string>
    <string name="slogan">El trabajo local más cerca de ti</string>
    <string name="logo">logo</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="mail">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="loginQ">¿No tienes cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="facilitoMayus">FACILITO</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="registroOpcionesQ1">¿Qué deseas hacer?</string>
    <string name="clienteQ1">Encuentra fácilmente al profesional que necesitas.</string>
    <string name="cliente">Cliente</string>
    <string name="proveedorQ1">Ofrece tus servicios y consigue más clientes.</string>
    <string name="proveedor">Proveedor</string>
    <string name="apellidoEjemplo">Pérez</string>
    <string name="apellido">Apellido:</string>
    <string name="telefono">Teléfono:</string>
    <string name="correo">Correo:</string>
    <string name="contrasena">Contraseña:</string>
    <string name="registro">Registro</string>
    <string name="nombreEjemplo">Juan</string>
    <string name="nombre">Nombre:</string>
    <string name="direccion">Dirección:</string>
    <string name="direccion_ejemplo">San Salvador</string>
    <string name="ejemploTelefono">1234-5678</string>
    <string name="dui">DUI:</string>
    <string name="duiEjemplo">12345678-9</string>
    <string name="emailEjemplo">juan.perez@gmail.com</string>
    <string name="contrasenaEjemplo">********</string>
    <string name="registrarse">Registrarse</string>
    <string name="ejemploNombreNegocio">Carpintero Juan</string>
    <string name="lblNombreNegocio">Nombre del negocio:</string>
    <string name="descripcion">Descripción:</string>
    <string name="adjuntar_foto">Adjuntar foto:</string>
    <string name="mi_negocio">Mi negocio</string>
    <string name="categoria">Categoría:</string>
    <string name="listo">Listo</string>
    <string name="ejemploDescripcion">Hago puertas y cortinas de madera.</string>
    <string name="adjuntar">Adjuntar foto</string>
    <string name="enviar_solicitud">Enviar solicitud</string>
    <string name="descripcion_problema">Necesito una puerta nueva y de color negro. Comparto foto.</string>
    <string name="lbl_describir_problema">Describe tu problema:</string>
    <string name="solicitud_de_servicio">Solicitud de servicio</string>
    <string name="carpinteria">Carpintería</string>
    <string name="titulo">Título:</string>
    <string name="arreglar_puerta">Arreglar puerta</string>
    <string name="editarPerfil">Editar Perfil</string>
    <string name="fotoPerfil">Foto de perfil:</string>
    <string name="guardarCambios">Guardar cambios</string>
    <string name="testEditarPerfil">Test Editar Perfil</string>
    <string name="contactar">Contactar</string>
    <string name="verPerfil">Ver Perfil</string>
    <string name="resenasRecientes">Reseñas recientes</string>
    <string name="resena1">María G. - Excelente trabajo en mi closet. Muy profesional y puntual. ★★★★★</string>
    <string name="resena2">Carlos R. - Muy buenas terminaciones. Recomendado. ★★★★☆</string>
    <string name="resena3">Ana L. - Cumplió con el tiempo acordado. Buena relación calidad-precio. ★★★★★</string>
    <string name="ajustes">Ajustes</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="sonido">Sonido</string>
    <string name="guardar">Guardar</string>
    <string name="titulo_notificacion">Notificacion</string>
    <string name="cerrar_notificacion">Cerrar notificacion</string>
    <string name="detalles">detalles</string>
    <string name="dummy_date">12/1/2026</string>

    <!--    STRINGS A UTILIZAR-->
    <string name="background_login_description">Background Login</string>
    <string name="txtTitleApp">FACILITO</string>
    <string name="txtSlogan">El trabajo local más cerca de ti</string>
    <string name="txtLoginTitle">Iniciar Sesión</string>
    <string name="hintEmail">Ingrese su email</string>
    <string name="hintPassword">Contraseña</string>
    <string name="txtLogin">Ingresar</string>
    <string name="txtNewAccountMessage">¿No tienes cuenta?</string>
    <string name="resenas">Reseñas</string>
    <string name="usuario">Usuario</string>
    <string name="comentario">Comentario\n</string>
    <string name="verMasResenas">Ver mas reseñas</string>
    <string name="editar">Editar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="register_button_next">Continuar</string>
    <string name="register_button_create">Crear cuenta</string>

    <!--  LOGIN ACTIVITY  -->
    <string name="login_title">Bienvenido</string>
    <string name="login_description">Ingresa a tu cuenta para continuar</string>
    <string name="login_email_hint">Correo electrónico</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_btn_sign_in">Ingresar</string>
    <string name="login_dont_have_account">¿Aún no tienes cuenta?</string>
    <string name="login_join_now">Registrate ahora</string>

    <!--  REGISTER ACTIVITY -->
    <string name="register_description">Conectando clientes con proveedores</string>

    <!--  STRING ACCOUNT TYPE ACTIVITY  -->
    <string name="account_type_title">Tipo de Cuenta</string>
    <string name="account_type_description">¿Cómo quieres usar Facilito?</string>
    <string name="account_type_client_role">Cliente</string>
    <string name="account_type_client_role_description">Busca y contrata servicios cerca de ti</string>
    <string name="account_type_provider_role">Proveedor</string>
    <string name="account_type_provider_role_description">Ofrece tus servicio y has crecer tu negocio</string>
    <string name="account_type_step">Paso 2 de 3: Tipo de Cuenta</string>

    <!--  STRING ACCOUNT CREDENTIALS  -->
    <string name="account_credentials_title">Credenciales</string>
    <string name="account_credentials_description">Configura tu correo y contraseña</string>
    <string name="account_credentials_email_hint">micorreo@email.com</string>
    <string name="account_credentials_password_hint">Mínimo 8 caracteres</string>
    <string name="account_credentials_confirm_password_hint">Confirmar contraseña</string>
    <string name="account_credentials_password_strength">Contraseña segura</string>
    <string name="account_credentials_step">Paso 3 de 3 - Credenciales</string>

    <string name="business_data_title">Información del Negocio</string>
    <string name="business_data_description">Cuéntale a tus clientes de tu negocio</string>
    <string name="business_data_photo">Foto del negocio</string>
    <string name="business_data_add_photo">Agregar foto</string>
    <string name="business_data_name">Nombre del negocio</string>
    <string name="business_data_name_hint">ej. Reparaciones Juan Mécanico</string>
    <string name="business_data_business_description">Descripción del negocio</string>
    <string name="business_data_business_description_hint">Describe los tipos de servicio que ofreces</string>
    <string name="business_data_step">Paso 3 de 4 - Detalles del negocio</string>
    <string name="title_activity_register_hosting">RegisterHostingActivity</string>

    <string name="dialog_loading_title">Creando tu cuenta...</string>
    <string name="dialog_loading_text">Por favor espera</string>

    <!--    VIEW PROFILE ACTIVITY  -->
    <string name="view_profile_title">Mi Perfil</string>
    <string name="view_profile_subtitle">Información Personal</string>
    <string name="view_profile_name">Nombre</string>
    <string name="view_profile_lastname">Apellidos</string>
    <string name="view_profile_dui">DUI</string>
    <string name="view_profile_email">Correo</string>
    <string name="view_profile_phone">Teléfono</string>
    <string name="view_profile_address">Dirección</string>

    <!--  EDIT PROFILE ACTIVITY  -->
    <string name="edit_profile_title">Editar Pefil</string>

    <!--  NEW REQUEST ACTIVITY  -->
    <string name="my_request_title">Mis Solicitudes</string>
    <string name="my_request_no_data">Sin solicitudes aún</string>
    <string name="my_request_create_request">Crear nueva solicitud</string>

    <string name="new_request_title">Nueva Solicitud de Servicio</string>
    <string name="new_request_description">Describe lo que necesitas</string>
    <string name="new_request_btn_create">Crear solicitud</string>
</resources>
